--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - Green Bootstrap Template</title>
+  <title>About Us</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -63,11 +63,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="./index.html">Home</a></li>
-          <li><a class="nav-link scrollto active" href="./about.html">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link" href="./index.html">Home</a></li>
+          <li><a class="nav-link active" href="./about.html">About</a></li>
+          <li><a class="nav-link" href="./index.html#services">Services</a></li>
+          <li class="dropdown"><a href="./products.html"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -84,7 +83,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="./contact.html">Contact</a></li>
+          <li><a class="nav-link scrollto" href="./index.html#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -112,7 +111,12 @@
 
     <section id="about" class="about">
       <div class="container">
-  
+
+        <div class="section-title">
+          <h2>About Us</h2>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        </div>
+
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
