--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@example.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +1 5589 55488 55
+        <i class="bi bi-envelope-fill"></i><a href="mailto:dinhduclam2001@gmail.com" target="_blank">dinhduclam2001@gmail.com</a>
+        <i class="bi bi-phone-fill phone-icon"></i> +84969582001
       </div>
       <div class="social-links d-none d-md-block">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -57,18 +57,18 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Green</a></h1>
+      <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo-48px.png" alt="" class="img-fluid" style="margin-right: 10px;"></a><a href="index.html">SmartSoil</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link" href="./index.html">Home</a></li>
           <li><a class="nav-link active" href="./about.html">About</a></li>
-          <li><a class="nav-link" href="./index.html#services">Services</a></li>
-          <li class="dropdown"><a href="./products.html"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
+          <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
+          <li class="dropdown"><a><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
+              <li><a href="./products.html">All</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -83,8 +83,8 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="./index.html#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
+          <li><a class="getstarted scrollto" href="#">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
