--- a/product-details.html
+++ b/product-details.html
@@ -161,7 +161,7 @@
     
     <section>
       <div class="container">
-        <table class="table table-striped">
+        <table class="table table-striped table-bordered">
           <thead>
             <tr>
               <th scope="col">#</th>
