--- a/products.html
+++ b/products.html
@@ -63,32 +63,28 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link" href="./index.html">Home</a></li>
-          <li><a class="nav-link" href="./about.html">About</a></li>
-          <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
-          <li class="dropdown active"><a><span>Products</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"> <a href="">Introduction<i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="./products.html">All</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">SmartSoil Story</a></li>
+              <li><a href="">Value Chain</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="./index.html#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#">Get Started</a></li>
+          <li><a class="nav-link" href="">Material Sources</a></li>
+          <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
+          <li class="dropdown"><a href="./products.html"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="./products.html">All</a></li>
+              <li><a href="#">San pham 1</a></li>
+              <li><a href="#">San pham 2</a></li>
+              <li><a href="#">San pham 3</a></li>
+            </ul>
+          </li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
+      
     </div>
   </header><!-- End Header -->
 
